--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,19 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+::-webkit-scrollbar {
+    width: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: none;
+}
 .custom-cursor {
     position: fixed;
     width: 75px; /* Adjust the size of the cursor */
@@ -126,7 +139,6 @@ main .line {
     justify-content: space-between;
     flex-direction: row;
     border-bottom: 1px solid #000;
-    cursor: pointer;
     position: relative;
     right: 0%;
     animation: maxi 2s;
@@ -195,9 +207,3 @@ main .line:hover .img img {
     }
 
 }
-
-
-
-
-
-
