--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ main .line .img {
     /* width: 75vw; */
 }
 
-main .line .img img {
+main .line .img img,video {
     display: none;
     height: 100%;
     width: 100%;
@@ -206,4 +206,8 @@ main .line:hover .img img {
         display: none;
     }
 
+}
+
+video{
+    display:none;
 }
